objects/ABB_Location__c.object
<CustomObject>
    <description>R4V1-This object refers to ABB Location.</description>
    <fields>
        <fullName>APTS_Validate_ExtRate_on_Revise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validate Exchange Rate on Revise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <description>R4V1-This field refers to</description>
        <label>Activity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>R4V1-This field refers to Address.</description>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BALId__c</fullName>
        <description>R4V1-This field refers to balid.</description>
        <externalId>true</externalId>
        <label>BALId</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>R4V1-This field refers to BU.</description>
        <label>BU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>R4V1-This field refers to city.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>R4V1-This field refers to company.</description>
        <label>Company</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>R4V1-This Picklist refers to Country.</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congo, Democratic Republic of the</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cote d&apos;Ivoire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Salvador</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DIV__c</fullName>
        <description>R4V1-This picklist refers to DIV.</description>
        <label>DIV</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Load_Year__c</fullName>
        <description>This field to be used for the data load activity as part of the ReOrg Business requirements : R4.2</description>
        <label>Data Load Year</label>
        <picklist>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R4V1-This field refers to Deleted.</description>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Descriptive_Name__c</fullName>
        <description>R4V1-This field refers to Descriptive Name.</description>
        <label>Descriptive Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISO Country</label>
        <referenceTo>ISO_Country__c</referenceTo>
        <relationshipLabel>ABB Locations</relationshipLabel>
        <relationshipName>ABB_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLastSuccessorActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLastSuccessorActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsModifiedByIntegration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Modified By Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBUCode__c</fullName>
        <description>It is used in the reports for grouping</description>
        <label>LBU Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastSuccessor__c</fullName>
        <label>LastSuccessor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationId__c</fullName>
        <description>R4V1-This field refers to LocationId.</description>
        <label>LocationId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <description>R4V1-This field refers to Location Type.</description>
        <label>Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Main</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-main</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <description>R4 Migration ID</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Non_ABB__c</fullName>
        <description>R4 Non ABB</description>
        <label>Non ABB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_GroupREF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Group</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>ABB Locations</relationshipLabel>
        <relationshipName>ABB_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Group_Number__c</fullName>
        <description>Created as part of R5-2343. Stores number format of Product group populated via trigger.</description>
        <label>Product Group Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Group_Temp__c</fullName>
        <formula>VALUE(LEFT(Product_Group__c,4))</formula>
        <label>Product Group Temp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>R4 Product Group</description>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>R4V1-This field refers to Region.</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia, Middle East &amp; Africa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting_Period__c</fullName>
        <label>Reporting Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Successor__c</fullName>
        <description>R4V1-This field refers to Successor.</description>
        <label>Successor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_ABB_Locations__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of ABB Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ABB Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LastSuccessor__c</columns>
        <columns>Successor__c</columns>
        <columns>BALId__c</columns>
        <columns>IsActive__c</columns>
        <columns>IsLastSuccessorActive__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ABB Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ABB Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>